fix: added spacing between cta and text in mobile view

--- a/assets/styles/components/cta.scss
+++ b/assets/styles/components/cta.scss
@@ -10,6 +10,8 @@
 		@include screen(medium) {
 			align-items: start;
 		}
+		// spacing between CTA and text
+		gap: 12px; // only in mobile (due to the vertical stack)
 		flex-direction: column;
 		text-align: center;
 		margin-bottom: 40px;
